--- a/MCD.html
+++ b/MCD.html
@@ -120,7 +120,7 @@
           <a class="p-2 text-muted" href="Divisibilidad.html">Divisibilidad</a>
           <a class="p-2 text-muted" href="MCD.html">MCD</a>
           <a class="p-2 text-muted" href="MCM.html">MCM</a>
-          <a class="p-2 text-muted" href="#">Teorema Fundamental</a>
+          <a class="p-2 text-muted" href="Teoremafundamental.html">Teorema Fundamental</a>
           <a class="p-2 text-muted" href="#">Criba de Eratóstenes</a>
         </nav>
     </div>
